--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,134 @@
+.container-item{
+    flex-basis: 18%;
+    height: auto;
+    margin-bottom: 2em;
+}
+.main-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 2em;
+}
 
+*{
+    box-sizing: border-box;
+}
+
+.hero-section{
+    width: 100vw;
+    height: 80vh;
+    background: linear-gradient(to right, #aee9e8, #b4f1b0);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.custom-navbar{
+    height: 90px;
+}
+
+.bold{
+    font-size: 100px;
+    font-weight: 900;
+}
+
+.custom-link{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.custom-links{
+    margin-left: 55vw;
+}
+
+.text-grad{
+    font-weight: bold;
+    background: linear-gradient(to right, #ff9a9e, #291475);
+    background-clip: text;
+    color: transparent;
+}
+
+.text-grad-logo{
+    font-weight: bold;
+    background: linear-gradient(to right, #7689e3, #150357);
+    background-clip: text;
+    color: transparent;
+    margin-left: 1em;
+}
+
+.navbar{
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+  }
+
+.card:hover {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); 
+    transition: box-shadow 0.3s ease;
+}
+
+.footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background-color: whitesmoke;
+        padding: 10px 0;
+        text-align: center;
+        color: #888;
+        box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.price{
+    color:rgb(4, 120, 114);
+}
+
+.cart-icon{
+    color: rgb(1, 1, 52);
+    font-size: 30px;
+}
+
+.image{
+    height: 300px;
+    width: 95%;
+    margin: 2.5% 0 0 2.5%;
+}
+
+.main-container-cart{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 8em 2em 2em 2em;
+    
+}
+
+.card-details{
+    width: 100%;
+    margin-bottom: 100px;
+    margin-top: 8em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.image-container{
+    flex-basis: 30%;
+}
+
+.details-container{
+    flex-basis: 68%;
+    padding: 1em;
+}
+
+.detail-image{
+    width: 100%;
+    height: auto;
+}
+
+.active{
+    color: green;
+}
