--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 .main-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content:space-evenly;
     margin: 2em;
 }
 
