working with cart page, some change in styling has been made for other pages, some features has been added

--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,14 @@
 .active{
     color: green;
 }
+
+.search{
+    margin: 8em 2em 2em 2em;
+    font-size: 20px;
+}
+
+.cart-button{
+    border: none;
+    outline: none;
+    background:white;
+}
