--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-.container-item{
+/*.container-item{
     flex-basis: 18%;
     height: auto;
     margin-bottom: 2em;
 }
+
 .main-container{
     display: flex;
     flex-wrap: wrap;
     justify-content:space-evenly;
     margin: 2em;
+}*/
+.container-item{
+    flex-basis: 20%;
+    height: auto;
+    margin: 1em;
+    cursor: pointer;
+
+}
+.main-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1em 1em 4em 7em;
 }
 
 *{
@@ -18,6 +31,16 @@
     width: 100vw;
     height: 80vh;
     background: linear-gradient(to right, #aee9e8, #b4f1b0);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.cart-section{
+    width: 100vw;
+    height: 50vh;
+    background: linear-gradient(to right, #6f4178, #6f8df0);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -47,6 +70,14 @@
     background: linear-gradient(to right, #ff9a9e, #291475);
     background-clip: text;
     color: transparent;
+}
+
+.text-grad-cart{
+    font-weight: bold;
+    background: linear-gradient(to right, white, #53df28);
+    background-clip: text;
+    color: transparent;
+    margin-top:2em;
 }
 
 .text-grad-logo{
@@ -97,12 +128,17 @@
     margin: 2.5% 0 0 2.5%;
 }
 
-.main-container-cart{
+/*.main-container-cart{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 8em 2em 2em 2em;
     
+}*/
+.main-container-cart{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1em 1em 4em 7em;
 }
 
 .card-details{
@@ -142,4 +178,9 @@
     border: none;
     outline: none;
     background:white;
+}
+
+.no-item-message{
+    margin-top: 8em;
+    text-align: center;
 }
